# onboard-methane-detection

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  README_pypi.md  build_package_for_deployment.py  pyproject.toml  showcase.ipynb
onboard_methane_detection/: __init__.py  mag1c_sas_base.py
onboard_methane_detection/inference/: linknet_exported.onnx  linknet_exported_dynamic.onnx  linknet_hf.onnx  linknet_hf_dynamic.onnx  pipeline.py  utils.py
onboard_methane_detection/onground/: rads.npy  utils.py  wv.npy
onboard_methane_detection/processing/: pipeline.py  utils.py
